--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 23.11.2024 13:43:24</small><a id="top"></a><table ><nav id="lunchbar"><ul><li><a href="#naLedarnach" >NA LEDARNACH</a></li></ul><ul><li><a href="#Mates" >MATES</a></li></ul><ul><li><a href="#Kuta" >KUTA</a></li></ul><ul><li><a href="#liskaBistrouska" >LIŠKA BISTROUŠKA</a></li></ul><ul><li><a href="#Rybarna" >RYBARNA</a></li></ul><ul><li><a href="#uCejpu" >U Čejpů</a></li></ul><ul><li><a href="#poctivaRestaurace" >Poctivá restaurace</a></li></ul><ul><li><a href="#CSAntal" >ČS Antal</a></li></ul><ul><li><a href="#zelenyPruhJidelna" >Zelený pruh</a></li></ul><ul><li><a href="#youyouge" >Čína(2)</a></li></ul></nav >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 24.11.2024 06:06:16</small><a id="top"></a><table ><nav id="lunchbar"><ul><li><a href="#naLedarnach" >NA LEDARNACH</a></li></ul><ul><li><a href="#Mates" >MATES</a></li></ul><ul><li><a href="#Kuta" >KUTA</a></li></ul><ul><li><a href="#liskaBistrouska" >LIŠKA BISTROUŠKA</a></li></ul><ul><li><a href="#Rybarna" >RYBARNA</a></li></ul><ul><li><a href="#uCejpu" >U Čejpů</a></li></ul><ul><li><a href="#poctivaRestaurace" >Poctivá restaurace</a></li></ul><ul><li><a href="#CSAntal" >ČS Antal</a></li></ul><ul><li><a href="#zelenyPruhJidelna" >Zelený pruh</a></li></ul><ul><li><a href="#youyouge" >Čína(2)</a></li></ul></nav >
 <table>
 <section id="naLedarnach"></section><tr><th>NA LEDARNACH<br><a href="https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka">https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka</a></th></tr>
 <tr>
@@ -8,10 +8,10 @@
 <h5 class="border_box_title">Vážení hosté, dnes nepřijímáme platební karty. Děkujeme za pochopení</h5></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky </h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar s nudlemi a zeleninou </td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Čočková s uzeným masem</td><td class="menuPrice">42,-</td></tr></tbody>
+<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar s nudlemi a zeleninou</td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zelná s klobásou</td><td class="menuPrice">42,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Květáková s vejci</td><td class="menuPrice">42,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">200g Vepřová játra na roštu, hranolky, tatarka</td><td class="menuPrice">155,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Vepřová kotleta bez kosti po srbsku, dušená jasmínová rýže</td><td class="menuPrice">162,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Špikovaný hovězí váleček v rajské omáčce, kynuté houskové knedlíky (těstoviny)</td><td class="menuPrice">167,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Vepřový guláš s cibulí a feferonkou, kynuté houskové knedlíky</td><td class="menuPrice">164,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová strava: 170g Medailonky z kuřecích prsou zapečené nivou, květákové pyré s máslem, volské oko</td><td class="menuPrice">187,-</td></tr><tr><td class="menuWeight">1Ks</td><td class="menuName">Kynutý koláč s vanilkovým krémem, naší banánovou marmeládou a jahodou</td><td class="menuPrice">25,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Smažené řízky z kuřecích prsou obalené v cornflakes, bramborová kaše s máslem, citron</td><td class="menuPrice">165,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z vepřové kotlety bez kosti na jemné houbové omáčce, hranolky</td><td class="menuPrice">167,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Dorůžova pečená vepřová panenka na jemné BBQ omáčce, restované špecle, máslová brokolice</td><td class="menuPrice">187,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zeleninový salát s trhanými listy promíchaný olivovým dresinkem, hermelín v těstíčku, vařené vejce, brusinkové žerve</td><td class="menuPrice">162,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">Každý den od 15:00 do 19:00., můžeš využít insta slevu na tato jídla: 150g Smažený sýr za 139,- nebo 150g  Mix gril za 139,-  (pro nesledující za 184,-Kč) Musíš si pouze o tuto cenu říct a prokázat sledován našeho instagramu na telefonu </td><td class="menuPrice">139,-/184,-</td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">139,-/184,-</td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">150g Mix gril z vepřové panenky, kuřecích prsou, vepřové pečeně a klobásky s cibulí, smažené plátky brambor, volské oko</td><td class="menuPrice">139,-/184,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Dnes na čepu</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Odnes si domů plechovková piva za super ceny. Staropramen 10° za 14,-Kč. Staropramen 11° za 16,- Kč a Staropramen 12° za 18,-Kč.  </td><td class="menuPrice"></td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName"> Arnoštová hořká 10° alk. 4,3%  spodně kvašené - pivovar ,,Pardubice´´</td><td class="menuPrice">42,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName"> Tanková 11° ležák alk. 4,7%  spodně kvašené - pivovar Staropramen</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Nové pivo od Staropramenu - Premiant extrachmel ležák, IBU 35, alk. 4,5% </td><td class="menuPrice">52,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Muflon 13° Red ALE alk. 5,4% - svrchně kvašené pivo</td><td class="menuPrice">59,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Houba (0,2l červené víno s 0,3l colou a ledem)</td><td class="menuPrice">72,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pokrmy obsahují alergeny. Informace o výskytu konkrétních alergenů v pokrmu žádejte u obsluhy</td><td class="menuPrice"></td></tr></tbody></table></table>
+<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Záhorácký vepřový závitek na přírodní omáčce, mačkané brambory s cibulkou</td><td class="menuPrice">155,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Maďarský hovězí guláš s restovanou anglickou slaninou, cibulí a feferonkou, kynuté houskové knedlíky</td><td class="menuPrice">168,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Moravský vrabec, bramborové knedlíky s cibulkou, červené zelí</td><td class="menuPrice">162,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Kuřecí játra na roštu se sázeným vejcem, smažené bramborové plátky, mexický dip</td><td class="menuPrice">157,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Smažené masové karbanátky, bramborový salát</td><td class="menuPrice">155,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová strava: Grilovaná vepřová panenka sypená parmazánem, celerové hranolky, malý zeleninový salát, česnekový dip</td><td class="menuPrice">189,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Smažený sýr (45%), vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">164,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Těstoviny fusilli s kuřecím masem a listovým špenátem ve smetanové omáčce, strouhaný parmazán</td><td class="menuPrice">167,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z kuřecích prsou zapečený s uzeninou a hermelínem, smažené bramborové plátky</td><td class="menuPrice">166,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Kapsa z vepřové kotlety bez kosti plněná fazolovými lusky s anglickou slaninou a vařeným vejcem, smažené bramborové plátky, kari dip</td><td class="menuPrice">166,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">Každý den od 15:00 do 19:00., můžeš využít insta slevu na tato jídla: 150g Smažený sýr za 139,- nebo 150g  Mix gril za 139,-  (pro nesledující za 184,-Kč) Musíš si pouze o tuto cenu říct a prokázat sledován našeho instagramu na telefonu </td><td class="menuPrice">139,-/184,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">139,-/184,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Mix gril z vepřové panenky, kuřecích prsou, vepřové pečeně a klobásky s cibulí, smažené plátky brambor, volské oko</td><td class="menuPrice">139,-/184,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Naše dezerty</td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Odnes si domů plechovková piva za super ceny. Staropramen 10° za 14,-Kč. Staropramen 11° za 16,- Kč a Staropramen 12° za 18,-Kč.  </td><td class="menuPrice"></td></tr><tr><td class="menuWeight">0,5</td><td class="menuName">Nové pivo od Staropramenu - Premiant extrachmel ležák, IBU 35, alk. 4,5% </td><td class="menuPrice">52,.</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName"> Tanková 11° ležák alk. 4,7%  spodně kvašené - pivovar Staropramen</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName"> Arnoštová hořká 10° alk. 4,3%  spodně kvašené - pivovar ,,Pardubice´´</td><td class="menuPrice">42,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Muflon 13° Red ALE alk. 5,4% - svrchně kvašené pivo</td><td class="menuPrice">59,-</td></tr><tr><td class="menuWeight">0,3-0,3l</td><td class="menuName">Bezinka</td><td class="menuPrice">27,-/34,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">wi-fi heslo: www.senkyrna.cz</td><td class="menuPrice"></td></tr></tbody></table></table>
 </td>
 </tr>
 </table>
@@ -26,7 +26,13 @@
 <script>document.write("<script type='text/javascript' src='https://www.menubot.cz/app/users/mattes32598458756932458985/export/specialoffer1_a.js?v=" + Date.now() + "'><\/script>");</script></figure></div><div class="member-intro offset-top-bottom col-md-12 col-xs-12 col-sm-12" data-animation="fadeInRight fast" data-delay="0.2"><br/><a href="#" name="tyden" style="display: block;
   position: relative;
   top: -100px; 
-  visibility: hidden;"></a><br/><table class="dm"></table><br/></div></div>
+  visibility: hidden;"></a><br/><table class="dm"></table><br/><div class="member-intro offset-top-bottom col-md-12 col-xs-12 col-sm-12" data-animation="fadeInRight fast" data-delay="0.2" style="padding: 0px;"><!--<br><h2>Mattes restaurace</h2><center><p><strong><br>Plzeňský Prazdroj</strong> - tankové pivo<br>
+Volba Sládků<br>
+Kozel tmavý<br>
+Cider Kingswood<br>
+<br>
+Letní zahrada<br>
+Vytápěna zimní zahrada</p><center>--></div></div></div>
 </td>
 </tr>
 </table>
@@ -36,7 +42,7 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–13:30</em></div>
-<div class="nadpis">Sobota 23.11.2024 </div>
+<div class="nadpis">Neděle 24.11.2024 </div>
 <ul>
 <li class="polevka">Restaurace má tento den zavřeno.</li> </ul>
 </div>
@@ -49,7 +55,7 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Sobota 23.11.2024 </div>
+<div class="nadpis">Neděle 24.11.2024 </div>
 <ul>
 <li class="polevka">Restaurace má tento den zavřeno.</li> </ul>
 </div>
@@ -72,95 +78,8 @@
 <div class="inner">
 <h4 class="headline">POLEDNÍ MENU</h4>
 <div class="bookmarks cond">
-<div class="item js-bookmark">
-<a class="link js-bookmark-switcher" href="#day_23757">Pátek 22. 11.</a>
 </div>
-</div>
-<table class="list js-bookmark-block" id="day_23757">
-<tr>
-<td class="volume"></td>
-<td class="name">
-<span class="title cond">Hovězí vývar s masem,</span>
-<span class="allergen">(A: 1, 3, 7, 9)</span>
-<p class="desc">zeleninou a nudlemi                               
-
-</p>
-</td>
-<td class="price cond">
-        49 Kč    </td>
-</tr>
-<tr>
-<td class="volume">300g</td>
-<td class="name">
-<span class="title cond">Lasagne s kuřecím masem,</span>
-<span class="allergen">(A: 1, 3, 7)</span>
-<p class="desc">smetanovým špenátem a parmazánem </p>
-</td>
-<td class="price cond">
-        159 Kč    </td>
-</tr>
-<tr>
-<td class="volume">150g</td>
-<td class="name">
-<span class="title cond">Pečený vepřový prejt </span>
-<span class="allergen">(A: 1, 3, 7)</span>
-<p class="desc">s vařeným bramborem a kysaným zelím </p>
-</td>
-<td class="price cond">
-        149 Kč    </td>
-</tr>
-<tr>
-<td class="volume">150g</td>
-<td class="name">
-<span class="title cond">Hovězí Stroganoff </span>
-<span class="allergen">(A: 1, 7, 10)</span>
-<p class="desc">s dušenou rýží
-</p>
-</td>
-<td class="price cond">
-        169 Kč    </td>
-</tr>
-<tr>
-<td class="volume">300g</td>
-<td class="name">
-<span class="title cond">Francouzské brambory,</span>
-<span class="allergen">(A: 1, 3)</span>
-<p class="desc">zapečené s uzeným masem, cibulkou a sýrem, kyselá okurka </p>
-</td>
-<td class="price cond">
-        149 Kč    </td>
-</tr>
-<tr>
-<td class="volume">150g</td>
-<td class="name">
-<span class="title cond">Kuřecí steak na grilu, </span>
-<span class="allergen">(A: 1, 7)</span>
-<p class="desc">opečené brambory a pikantní dip</p>
-</td>
-<td class="price cond">
-        169 Kč    </td>
-</tr>
-<tr>
-<td class="volume">150g</td>
-<td class="name">
-<span class="title cond">Flank steak na grilu </span>
-<span class="allergen">(A: 1, 7)</span>
-<p class="desc">s hříbkovo-smetanovou omáčkou, americké brambory </p>
-</td>
-<td class="price cond">
-        179 Kč    </td>
-</tr>
-<tr>
-<td class="volume">200g</td>
-<td class="name">
-<span class="title cond">Vykostěné vepřové kolínko na černém pivě, </span>
-<span class="allergen">(A: 1, 3, 7, 10)</span>
-<p class="desc">podávané s křenem, hořčicí a čerstvým chlebem </p>
-</td>
-<td class="price cond">
-        179 Kč    </td>
-</tr>
-</table>
+<p class="no-meals">Každý pracovní den je pro vás v naší Šalandě nachystáno polední menu. Ne vždy ho ale stačíme nahrát na web.</p>
 </div>
 </section>
 </td>
