Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 12.12.2024 08:33:13</small><a id="top"></a><table ><nav id="lunchbar"><ul><li><a href="#naLedarnach" >NA LEDARNACH</a></li></ul><ul><li><a href="#Mates" >MATES</a></li></ul><ul><li><a href="#Kuta" >KUTA</a></li></ul><ul><li><a href="#liskaBistrouska" >LIŠKA BISTROUŠKA</a></li></ul><ul><li><a href="#Rybarna" >RYBARNA</a></li></ul><ul><li><a href="#uCejpu" >U Čejpů</a></li></ul><ul><li><a href="#poctivaRestaurace" >Poctivá restaurace</a></li></ul><ul><li><a href="#CSAntal" >ČS Antal</a></li></ul><ul><li><a href="#zelenyPruhJidelna" >Zelený pruh</a></li></ul><ul><li><a href="#youyouge" >Čína(2)</a></li></ul></nav >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 12.12.2024 09:03:51</small><a id="top"></a><table ><nav id="lunchbar"><ul><li><a href="#naLedarnach" >NA LEDARNACH</a></li></ul><ul><li><a href="#Mates" >MATES</a></li></ul><ul><li><a href="#Kuta" >KUTA</a></li></ul><ul><li><a href="#liskaBistrouska" >LIŠKA BISTROUŠKA</a></li></ul><ul><li><a href="#Rybarna" >RYBARNA</a></li></ul><ul><li><a href="#uCejpu" >U Čejpů</a></li></ul><ul><li><a href="#poctivaRestaurace" >Poctivá restaurace</a></li></ul><ul><li><a href="#CSAntal" >ČS Antal</a></li></ul><ul><li><a href="#zelenyPruhJidelna" >Zelený pruh</a></li></ul><ul><li><a href="#youyouge" >Čína(2)</a></li></ul></nav >
 <table>
 <section id="naLedarnach"></section><tr><th>NA LEDARNACH<br><a href="https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka">https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka</a></th></tr>
 <tr>
@@ -27,13 +27,7 @@
 <div class="member-intro offset-top-bottom col-md-6 col-xs-12 col-sm-12" data-animation="fadeInLeft fast" data-delay="0.2"><figure><script>document.write("<script type='text/javascript' src='https://www.menubot.cz/app/users/mattes32598458756932458985/export/dailymenu_a.js?v=" + Date.now() + "'><\/script>");</script><br/><br/><br/></figure></div><div class="member-intro offset-top-bottom col-md-12 col-xs-12 col-sm-12" data-animation="fadeInRight fast" data-delay="0.2"><br/><a href="#" name="tyden" style="display: block;
   position: relative;
   top: -100px; 
-  visibility: hidden;"></a><br/><table class="dm"></table><br/><div class="member-intro offset-top-bottom col-md-12 col-xs-12 col-sm-12" data-animation="fadeInRight fast" data-delay="0.2" style="padding: 0px;"><!--<br><h2>Mattes restaurace</h2><center><p><strong><br>Plzeňský Prazdroj</strong> - tankové pivo<br>
-Volba Sládků<br>
-Kozel tmavý<br>
-Cider Kingswood<br>
-<br>
-Letní zahrada<br>
-Vytápěna zimní zahrada</p><center>--></div></div></div>
+  visibility: hidden;"></a><br/><table class="dm"></table><br/></div></div>
 </td>
 </tr>
 </table>
@@ -112,7 +106,7 @@ Vytápěna zimní zahrada</p><center>--></div></div></div>
 <section id="Rybarna"></section><a href="#top">&#8635;</a><tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlanticke makrely s ananasovou salsou, indicky dal z cervene cocky se zeleninou, pecenymi rajcaty a klicky 169</li><li>Peceny filet z cerstveho jihoceskeho candata s ananasovou salsou, indicky dal z cervene cocky se zeleninou, pecenymi rajcaty a klicky 205</li><li>Pomalu dusene hovezi ve sladke omacce s hoisin, zazvorem a korenim peti vuni, jasminova ryze, salatek 169</li><li>Smazene rizecky ze srnci kyty, zakarpatsky bramborovy salat {vinegret} s cervenou repou, kysanym zelim, cibulkou a nakladanymi okurkami, citron {L} 199</li><li>Ratatouille z pecene zeleniny, cizrnovy hummus, zeleninovy pilaf, sazene vejce 169</li></ol>
+<ol><li>Smazeny filet z atlantickeho hejka v pivnim testicku, stouchane brambory s porkem, salatek z cervene repy, citron {L} 169</li><li>Malajska laksa s krevetami, zeleninou, ryzovymi nudlemi, kokosovym mlekem a zelenou cibulkou 205</li><li>Japonsky ramen s dusenym miso hovezim, sazenym vejcem, kapustou a psenicnymi nudlemi v silnem hovezim vyvaru se zelenymi bylinkami a klicky {L} 169</li><li>Italske dynove rizoto na bilem vine s pecenymi bazantimi stehynky na divokem koreni, salatek 199</li><li>Zapecena dyne hokkaido plnena cizrnovym kari s rajcaty, zeleninou a balkanskym syrem, salatek 169</li></ol>
 </td>
 </tr>
 </table>
@@ -124,11 +118,11 @@ Vytápěna zimní zahrada</p><center>--></div></div></div>
 <div class="inner">
 <h4 class="headline">POLEDNÍ MENU</h4>
 <div class="bookmarks cond">
-<div class="item js-bookmark">
-<a class="link js-bookmark-switcher" href="#day_23879">Středa 11. 12.</a>
+<div class="item js-bookmark active">
+<a class="link js-bookmark-switcher" href="#day_23885">Čtvrtek 12. 12.</a>
 </div>
 </div>
-<table class="list js-bookmark-block" id="day_23879">
+<table class="list js-bookmark-block" id="day_23885" style="display:table;">
 <tr>
 <td class="volume"></td>
 <td class="name">
@@ -148,21 +142,21 @@ Vytápěna zimní zahrada</p><center>--></div></div></div>
         49 Kč    </td>
 </tr>
 <tr>
-<td class="volume">1ks</td>
+<td class="volume">3ks</td>
 <td class="name">
-<span class="title cond">Club sendvič s trhaným vepřovým masem, </span>
-<span class="allergen">(A: 1, 3, 7, 10, 12)</span>
-<p class="desc">karamelizovaná cibulka a hranolky </p>
+<span class="title cond">Plněné bramborové knedlíky uzeným masem, </span>
+<span class="allergen">(A: 1, 3, 7, 12)</span>
+<p class="desc">sladkokysele zeli a vídeňská cibulka </p>
 </td>
 <td class="price cond">
         169 Kč    </td>
 </tr>
 <tr>
-<td class="volume">1ks</td>
+<td class="volume">150g</td>
 <td class="name">
-<span class="title cond">Kuřecí stehno na paprice </span>
-<span class="allergen">(A: 1, 3, 7)</span>
-<p class="desc">s houskovým knedlíkem  </p>
+<span class="title cond">Kuřecí játra na cibulce</span>
+<span class="allergen">(A: 1)</span>
+<p class="desc">s dušenou rýži </p>
 </td>
 <td class="price cond">
         159 Kč    </td>
@@ -170,29 +164,28 @@ Vytápěna zimní zahrada</p><center>--></div></div></div>
 <tr>
 <td class="volume">150g</td>
 <td class="name">
-<span class="title cond">Přírodní hovězí plátek</span>
-<span class="allergen">(A: 1)</span>
-<p class="desc">s dušenou rýži                     </p>
+<span class="title cond">Hovězí líčka na červeném vine a kořenové zelenině </span>
+<span class="allergen">(A: 1, 7, 9, 10, 12)</span>
+<p class="desc">s bramborovou kaší</p>
 </td>
 <td class="price cond">
-        169 Kč    </td>
-</tr>
-<tr>
-<td class="volume">500g</td>
-<td class="name">
-<span class="title cond">Pečená chilli křidélka</span>
-<span class="allergen">(A: 1, 3, 6, 7, 8, 9, 11)</span>
-<p class="desc">se zeleninovým salátem, bagetou a sweet-chilli dipem                                        </p>
-</td>
-<td class="price cond">
-        169 Kč    </td>
+        179 Kč    </td>
 </tr>
 <tr>
 <td class="volume">150g</td>
 <td class="name">
-<span class="title cond">Kapustový karbanátek s masem, </span>
-<span class="allergen">(A: 1, 3, 7, 12)</span>
-<p class="desc">máslová bramborová kaše a kyselá okurka </p>
+<span class="title cond">Kuřecí stehenní steak </span>
+<span class="allergen">(A: 1, 9)</span>
+<p class="desc">s grilovanou zeleninou</p>
+</td>
+<td class="price cond">
+        169 Kč    </td>
+</tr>
+<tr>
+<td class="volume">300g</td>
+<td class="name">
+<span class="title cond">Špagety Bolognese </span>
+<span class="allergen">(A: 1, 3, 7, 9)</span>
 </td>
 <td class="price cond">
         159 Kč    </td>
