Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 13.12.2024 08:32:36</small><a id="top"></a><table ><nav id="lunchbar"><div class="nav-row"><ul><li><a href="#naLedarnach">NA LEDARNACH</a></li><li><a href="#Mates">MATES</a></li><li><a href="#Kuta">KUTA</a></li><li><a href="#liskaBistrouska">LIŠKA BISTROUŠKA</a></li></ul></div><div class="nav-row"><ul><li><a href="#Rybarna">RYBARNA</a></li><li><a href="#uCejpu">U Čejpů</a></li><li><a href="#poctivaRestaurace">Poctivá restaurace</a></li><li><a href="#CSAntal">ČS Antal</a></li></ul></div><div class="nav-row"><ul><li><a href="#zelenyPruhJidelna">Zelený pruh</a></li><li><a href="#youyouge">Čína(2)</a></li><li><a href="#antalStaska">&#9757;Jídelna Antala Staška</a></li></ul></div></nav>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 13.12.2024 09:03:53</small><a id="top"></a><table ><nav id="lunchbar"><div class="nav-row"><ul><li><a href="#naLedarnach">NA LEDARNACH</a></li><li><a href="#Mates">MATES</a></li><li><a href="#Kuta">KUTA</a></li><li><a href="#liskaBistrouska">LIŠKA BISTROUŠKA</a></li></ul></div><div class="nav-row"><ul><li><a href="#Rybarna">RYBARNA</a></li><li><a href="#uCejpu">U Čejpů</a></li><li><a href="#poctivaRestaurace">Poctivá restaurace</a></li><li><a href="#CSAntal">ČS Antal</a></li></ul></div><div class="nav-row"><ul><li><a href="#zelenyPruhJidelna">Zelený pruh</a></li><li><a href="#youyouge">Čína(2)</a></li><li><a href="#antalStaska">&#9757;Jídelna Antala Staška</a></li></ul></div></nav>
 <table>
 <section id="naLedarnach"></section><tr><th>NA LEDARNACH<br><a href="https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka">https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka</a></th></tr>
 <tr>
@@ -27,13 +27,7 @@
 <div class="member-intro offset-top-bottom col-md-6 col-xs-12 col-sm-12" data-animation="fadeInLeft fast" data-delay="0.2"><figure><script>document.write("<script type='text/javascript' src='https://www.menubot.cz/app/users/mattes32598458756932458985/export/dailymenu_a.js?v=" + Date.now() + "'><\/script>");</script><br/><br/><br/></figure></div><div class="member-intro offset-top-bottom col-md-12 col-xs-12 col-sm-12" data-animation="fadeInRight fast" data-delay="0.2"><br/><a href="#" name="tyden" style="display: block;
   position: relative;
   top: -100px; 
-  visibility: hidden;"></a><br/><table class="dm"></table><br/><div class="member-intro offset-top-bottom col-md-12 col-xs-12 col-sm-12" data-animation="fadeInRight fast" data-delay="0.2" style="padding: 0px;"><!--<br><h2>Mattes restaurace</h2><center><p><strong><br>Plzeňský Prazdroj</strong> - tankové pivo<br>
-Volba Sládků<br>
-Kozel tmavý<br>
-Cider Kingswood<br>
-<br>
-Letní zahrada<br>
-Vytápěna zimní zahrada</p><center>--></div></div></div>
+  visibility: hidden;"></a><br/><table class="dm"></table><br/></div></div>
 </td>
 </tr>
 </table>
@@ -112,7 +106,7 @@ Vytápěna zimní zahrada</p><center>--></div></div></div>
 <section id="Rybarna"></section><a href="#top">&#8635;</a><tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Smazeny filet z atlantickeho hejka v pivnim testicku, stouchane brambory s porkem, salatek z cervene repy, citron {L} 169</li><li>Malajska laksa s krevetami, zeleninou, ryzovymi nudlemi, kokosovym mlekem a zelenou cibulkou 205</li><li>Japonsky ramen s dusenym miso hovezim, sazenym vejcem, kapustou a psenicnymi nudlemi v silnem hovezim vyvaru se zelenymi bylinkami a klicky {L} 169</li><li>Italske dynove rizoto na bilem vine s pecenymi bazantimi stehynky na divokem koreni, salatek 199</li><li>Zapecena dyne hokkaido plnena cizrnovym kari s rajcaty, zeleninou a balkanskym syrem, salatek 169</li></ol>
+<ol><li>Peceny filet z cerstveho pstruha s pecenymi rajcaty a bazalkovym pestem, indicke cizrnove kari s pecenou dyni a zeleninou 175</li><li>Peceny filet z cerstve prazmy s pecenymi rajcaty a bazalkovym pestem, indicke cizrnove kari s pecenou dyni a zeleninou 205</li><li>Dwaejigogi bokkeum – korejske pikantni veprove nudlicky s gochujang, zazvorem, zelenou cibulkou a prazenym sezamem, jasminova ryze, kimci z pekingskeho zeli 169</li><li>Linguine s nudlickami hoveziho flank steaku, pecenou dyni, susenymi rajcaty, petrzelkovym pestem a hoblinami grana padano {L} 199</li><li>Kvetakove placicky s kapustou a spetkou muskatu, pecene brambory, tatarska omacka {L} 169</li></ol>
 </td>
 </tr>
 </table>
